[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["lwooden <lowell.wooden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
env_logger = "0.8.3"
pretty_env_logger = "0.4.0"
log = "0.4.0"


[[bin]]
name = "server"
