[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["lwooden <lowell.wooden@gmail.com>"]
edition = "2018"
default-run = "tutor-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"


[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
env_logger = "0.8.3"
pretty_env_logger = "0.4.0"
log = "0.4.0"
# Data serialization library 
serde = { version = "1.0.110", features = ["derive"] } 
# Time library 
chrono = {version = "0.4.11", features = ["serde"]}